Fix overflow in header

--- a/frontend/css/rannts.sass
+++ b/frontend/css/rannts.sass
@@ -32,6 +32,8 @@ $nav-padding: 20px
 
 
 .nav-main
+  height: 5em
+
   .is-active
     text-decoration: underline
   a.nav-item:hover
